ressources-fluentd/k8s/mysql/mysql-service.yml
apiVersion: v1
kind: Service
metadata:
  name: service-mysql
  namespace: monitoring-elk
spec:
  type: ClusterIP
  selector:
    name: mysql
  ports:
    #--port du service interne
    - port: 3306
    #--- port du conteneur
      targetPort: 3306
      name: mysql-port
